<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:text="Add Task"
        android:textColor="@color/black"
        android:textSize="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/addtitle"
        android:layout_width="258dp"
        android:layout_height="70dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addDesc"
        android:layout_width="264dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtitle"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="72dp"
        android:layout_height="21dp"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:text="Task title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addtitle"
        app:layout_constraintEnd_toEndOf="@+id/addtitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addtitle"
        app:layout_constraintTop_toTopOf="@+id/addtitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:text="Task Description"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addDesc"
        app:layout_constraintEnd_toEndOf="@+id/addDesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addDesc"
        app:layout_constraintTop_toTopOf="@+id/addDesc"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="Add Task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="Back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <EditText
        android:id="@+id/addstate"
        android:layout_width="271dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="state"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDesc"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:text="Task Status"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addstate"
        app:layout_constraintEnd_toEndOf="@+id/addstate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addstate"
        app:layout_constraintTop_toTopOf="@+id/addstate"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addstate"
        app:layout_constraintVertical_bias="0.132">

        <RadioButton
            android:id="@+id/team1"
            android:layout_width="124dp"
            android:layout_height="17dp"
            android:text="Team 1" />

        <RadioButton
            android:id="@+id/team2"
            android:layout_width="125dp"
            android:layout_height="18dp"
            android:text="Team 2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/team3"
            android:layout_width="124dp"
            android:layout_height="19dp"
            android:text="Team 3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>


    <ImageView
        android:id="@+id/imageView_showFromS3"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        app:srcCompat="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="upload_file"
        android:textColor="#403B3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />
</androidx.constraintlayout.widget.ConstraintLayout>